Practice with Pytest markers

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ python_functions = test_*
 markers=
     users: Marker for user-related tests.
     regression: Marker for regression tests.
+    authentication: Marker for authentication tests.
