--- a/pytest.ini
+++ b/pytest.ini
@@ -5,5 +5,6 @@ python_classes = Test*
 python_functions = test_*
 markers=
     users: Marker for user-related tests.
+    files: Marker for file-related tests.
     regression: Marker for regression tests.
     authentication: Marker for authentication tests.
