Practicing writing API autotest. Part 2

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,5 +6,6 @@ python_functions = test_*
 markers=
     users: Marker for user-related tests.
     files: Marker for file-related tests.
+    courses: Marker for courses-related tests.
     regression: Marker for regression tests.
     authentication: Marker for authentication tests.
