Practice of writing API autotests for working with exercises. Creating an exercise

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,5 +7,6 @@ markers=
     users: Marker for user-related tests.
     files: Marker for file-related tests.
     courses: Marker for courses-related tests.
+    exercises: Marker for exercises-related tests.
     regression: Marker for regression tests.
     authentication: Marker for authentication tests.
