Practicing integrating coverage into API tests

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ __pycache__
 # allure
 allure-results
 allure-reportg
+
+#coverage
+coverage.html
+coverage-results
+coverage-report.json
+coverage-history.json
